# openapi/openapi.json
@@ -3602,119 +3602,6 @@
                 "summary": "api.v1.parties.requests.approve"
             }
         },
-        "/api/v1/parties/{party}/requests/{trackRequest}/rating": {
-            "delete": {
-                "operationId": "deleteApiV1PartiesPartyRequestsTrackRequestRating",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "party",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "in": "path",
-                        "name": "trackRequest",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object"
-                                }
-                            }
-                        },
-                        "description": "Successful response."
-                    },
-                    "401": {
-                        "description": "Unauthenticated."
-                    }
-                },
-                "security": [
-                    {
-                        "sanctumBearer": []
-                    },
-                    {
-                        "sanctumCookie": []
-                    }
-                ],
-                "summary": "api.v1.parties.requests.rating.destroy"
-            },
-            "put": {
-                "operationId": "putApiV1PartiesPartyRequestsTrackRequestRating",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "party",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "in": "path",
-                        "name": "trackRequest",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "value": {
-                                        "type": "string"
-                                    }
-                                },
-                                "required": [
-                                    "value"
-                                ],
-                                "type": "object"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "responses": {
-                    "200": {
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object"
-                                }
-                            }
-                        },
-                        "description": "Successful response."
-                    },
-                    "401": {
-                        "description": "Unauthenticated."
-                    },
-                    "422": {
-                        "description": "Validation failed."
-                    }
-                },
-                "security": [
-                    {
-                        "sanctumBearer": []
-                    },
-                    {
-                        "sanctumCookie": []
-                    }
-                ],
-                "summary": "api.v1.parties.requests.rating.store"
-            }
-        },
         "/api/v1/parties/{party}/requests/{trackRequest}/reject": {
             "post": {
                 "operationId": "postApiV1PartiesPartyRequestsTrackRequestReject",
